--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <body>
     <div id ="container">
       <h1> Pixelate </h1>
+      <div id="row-button">
+        Rows
+        <button onclick="rowPlus()"> + </button>
+      </div>
+      <div>
+        <table id="cells">
+        </table>
+      </div>
     </div>
     <script src="script.js" type="text/javascript"> </script>
   </body>
