--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         Rows
         <button onclick="rowPlus()"> + </button>
       </div>
+      <div id="col-button">
+        Columns
+        <button onclick="colPlus()"> + </button>
+      </div>
       <div>
         <table id="cells">
         </table>
