--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="row-button">
         Rows
         <button onclick="rowPlus()"> + </button>
+        <button onclick="rowMinus()"> - </button>
       </div>
       <div id="col-button">
         Columns
