--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div id="col-button">
         Columns
         <button onclick="colPlus()"> + </button>
+        <button onclick="colMinus()"> - </button>
       </div>
       <div>
         <table id="cells">
