--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         <button onclick="colPlus()"> + </button>
         <button onclick="colMinus()"> - </button>
       </div>
+      <div id="color-select">
+        Colors:
+        <select id="select-color" onchange="updateColor()">
+          <option value="red">Red</option>
+          <option value="blue">Blue</option>
+          <option value="yellow">Yellow</option>
+          <option value="purple">Purple</option>
+          <option value="green">Green</option>
+          <option value="orange">Orange</option>
+          <option value="white">White</option>
+        </select>
+      </div>
       <div>
         <table id="cells">
         </table>
