fill uncolored cells

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Assignment 4 TTP
+      Assignment 3 TTP
     </title>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -30,6 +30,9 @@
           <option value="orange">Orange</option>
           <option value="white">White</option>
         </select>
+      </div>
+      <div>
+        <button onclick="fillUncolored()">Fill uncolored cells</button>
       </div>
       <div>
         <table id="cells">
