--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <button onclick="fillUncolored()">Fill uncolored cells</button>
       </div>
       <div>
+        <button onclick="fillAll()">Fill all cells</button>
+      </div>
+      <div>
         <table id="cells">
         </table>
       </div>
