clear all cells

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <button onclick="fillAll()">Fill all cells</button>
       </div>
       <div>
+        <button onclick="clearAll()">Clear all cells</button>
+      </div>
+      <div>
         <table id="cells">
         </table>
       </div>
